# sibyl

./: .env.example  .env.quickstart.example  .gitignore  .pre-commit-config.yaml  .prototools  CLAUDE.md  CONTRIBUTING.md  README.md  Tiltfile  compose.e2e.yml  docker-compose.prod.yml  docker-compose.quickstart.test.yml  docker-compose.quickstart.yml  docker-compose.yml  install.sh  moon.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  setup-dev.sh
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  docs.yml  eval.yml  longmemeval-v2.yml  nightly-regression.yml  publish-dogfood-images.yml  publish.yml  (+1 more)
apps/cli/: README.md  moon.yml  pyproject.toml
apps/cli/src/sibyl_cli/: __init__.py  archive.py  auth.py  auth_store.py  client.py  common.py  config_store.py  context.py  context_quick.py  crawl.py  crawl_shared.py  debug.py  dev.py  docker.py  doctor.py  document.py  entity.py  entrypoint.py  epic.py  explore.py  host.py  id_resolution.py  ingest.py  local.py  logs.py  main.py  memory_display.py  onboarding.py  org.py  pending.py  pending_writes.py  project.py  project_refs.py  session.py  setup.py  skill.py  source.py  state.py  task.py  update.py  (+1 more)
apps/cli/src/sibyl_cli/data/hooks/: session-start.py  user-prompt-submit.py
apps/cli/src/sibyl_cli/data/skill-packs/: core.md  examples.md  migration.md  quick.md  workflows.md
apps/cli/src/sibyl_cli/data/skills/sibyl/: EXAMPLES.md  SKILL.md
apps/cli/tests/: test_archive.py  test_auth_login.py  test_auth_store.py  test_client_auth_refresh.py  test_client_errors.py  test_context_pack.py  test_docker_runtime.py  test_docs.py  test_doctor.py  test_entity.py  test_entrypoint.py  test_epic.py  test_host_runtime.py  test_id_resolution.py  test_ingest.py  test_local_surreal.py  test_logs.py  test_main_capture.py  test_main_search.py  test_onboarding.py  test_packaged_data.py  test_pending_cli.py  test_pending_writes.py  test_project.py  test_session.py  test_skill.py  test_source.py  test_task.py  test_update.py  test_user_prompt_hook.py
baselines/: auth_smoke.jsonl  graph_smoke.jsonl  manifest.json  mcp_smoke.jsonl  rest_smoke.jsonl  search_queries.jsonl
benchmarks/: compare_eval_reports.py  context_pack_eval.py  golden_context_retrieval_dataset.json  live_runtime_eval.py  longmemeval_bench.py  longmemeval_live.py  longmemeval_v2_download.py  longmemeval_v2_official.py  results_sibyl_hybrid.json  results_sibyl_raw.json
docs/: index.md  package.json
hooks/: README.md  configure.py  moon.yml  user-prompt-submit.py
tools/: __init__.py
(+743 files in other folders)
