# sibyl-cli - Command-line interface for Sibyl knowledge graph
# REST API client with Rich terminal output

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "../../VERSION"
pattern = "(?P<version>.+)"

[project]
name = "sibyl-dev"
dynamic = ["version"]
description = "CLI for Sibyl knowledge graph and task workflow"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
authors = [{ name = "Stefanie Jane", email = "stef@hyperbliss.tech" }]
keywords = ["knowledge-graph", "tasks", "cli", "mcp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

dependencies = [
    # CLI Framework
    "typer>=0.26.7",
    "rich>=13.0",
    # HTTP Client
    "httpx>=0.27",
    # Auth
    # Config
    "packaging>=26.0",
    "pyyaml>=6.0",
    "tomli-w>=1.2.0",
    # WebSocket (logs --follow)
    "websockets>=12.0",
    # Shared library
    "sibyl-core==1.0.0",
]

# =============================================================================
# Development Dependencies (uv)
# =============================================================================

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov>=7.0.0",
    "ruff",
]

[project.scripts]
sibyl = "sibyl_cli.entrypoint:main"

[project.urls]
Homepage = "https://github.com/hyperb1iss/sibyl"
Repository = "https://github.com/hyperb1iss/sibyl"

[tool.hatch.build.targets.wheel]
packages = ["src/sibyl_cli"]
# Include all files in package (not just .py) for data directory
artifacts = ["src/sibyl_cli/data/**/*"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",    # Line length (formatter handles)
    "RUF001",  # Ambiguous unicode (intentional for CLI styling)
]

[tool.ruff.lint.isort]
known-first-party = ["sibyl_cli", "sibyl_core"]

# =============================================================================
# uv - Package Sources
# =============================================================================

[tool.uv.sources]
sibyl-core = { workspace = true }
